[gd_scene load_steps=12 format=3 uid="uid://chyrbnoqdu1vu"]

[ext_resource type="Script" path="res://Scripts/GameCoordinators/MultigameImageCoordinator.gd" id="1_0ppc7"]
[ext_resource type="Script" path="res://Scripts/BitmapToImage/LayeredOpaqueMapsImageConstructor.gd" id="2_j0kto"]
[ext_resource type="Script" path="res://Scripts/StepControl.gd" id="3_ii0rx"]
[ext_resource type="Script" path="res://Scripts/InputListeners/CopyDetector.gd" id="4_oi4sq"]
[ext_resource type="Script" path="res://Scripts/ImageSaver.gd" id="5_6dxcy"]
[ext_resource type="Script" path="res://Scripts/PaletteGenerator.gd" id="6_ilha3"]
[ext_resource type="Script" path="res://Scripts/InputListeners/PaletteRequestDetector.gd" id="7_s23i7"]
[ext_resource type="Script" path="res://Scripts/InputListeners/SettingsInputListener.gd" id="8_rgd68"]

[sub_resource type="Image" id="Image_pvwiq"]
data = {
"data": PackedByteArray(1, 55, 98, 146, 125, 152, 1, 55, 98, 41, 43, 85, 127, 142, 152, 1, 55, 98, 1, 55, 98, 108, 136, 146, 1, 100, 108, 41, 65, 90, 41, 43, 85, 1, 100, 108, 1, 55, 98, 1, 55, 98, 41, 65, 90, 108, 136, 146, 41, 43, 85, 108, 136, 146, 95, 84, 109, 41, 43, 85, 38, 111, 119, 41, 65, 90, 41, 65, 90, 146, 125, 152, 95, 72, 106, 41, 43, 85, 95, 72, 106, 95, 72, 106, 114, 78, 112, 108, 136, 146, 1, 55, 98, 146, 125, 152, 1, 55, 98, 76, 78, 120, 41, 43, 85, 38, 111, 119, 1, 100, 108, 105, 86, 111, 127, 142, 152, 41, 65, 90, 76, 78, 120, 105, 86, 111, 1, 55, 98, 1, 100, 108, 76, 78, 120, 95, 72, 106, 1, 55, 98, 79, 54, 95, 1, 55, 98, 108, 136, 146, 105, 86, 111, 108, 114, 141, 41, 65, 90, 95, 84, 109, 76, 78, 120, 1, 55, 98, 108, 136, 146, 41, 43, 85, 1, 55, 98, 76, 78, 120, 41, 43, 85, 38, 111, 119, 38, 111, 119, 38, 111, 119, 76, 78, 120, 1, 100, 108, 76, 78, 120, 41, 43, 85, 146, 125, 152, 41, 43, 85, 95, 72, 106, 108, 136, 146, 76, 78, 120, 146, 125, 152, 38, 111, 119, 76, 78, 120, 108, 136, 146, 1, 55, 98, 1, 55, 98, 1, 55, 98, 1, 55, 98, 1, 55, 98, 108, 136, 146, 114, 78, 112, 41, 65, 90, 79, 54, 95, 146, 125, 152, 127, 142, 152, 38, 111, 119, 79, 54, 95, 1, 55, 98, 1, 100, 108, 114, 78, 112, 41, 43, 85, 41, 65, 90, 1, 100, 108, 41, 65, 90, 60, 71, 95, 41, 43, 85, 108, 114, 141, 41, 65, 90, 108, 114, 141, 41, 43, 85, 38, 111, 119, 146, 125, 152, 38, 111, 119, 1, 55, 98, 1, 55, 98, 1, 55, 98, 38, 111, 119, 1, 100, 108, 108, 114, 141, 1, 55, 98, 1, 55, 98, 95, 72, 106, 76, 78, 120, 1, 100, 108, 108, 114, 141, 1, 100, 108, 1, 55, 98, 146, 125, 152, 41, 43, 85, 95, 84, 109, 1, 100, 108, 1, 100, 108, 76, 78, 120, 108, 136, 146, 95, 72, 106, 41, 65, 90, 1, 55, 98, 1, 55, 98, 1, 55, 98, 108, 114, 141, 1, 55, 98, 38, 111, 119, 38, 111, 119, 108, 114, 141, 1, 55, 98, 108, 136, 146, 1, 55, 98, 38, 111, 119, 95, 72, 106, 1, 100, 108, 127, 142, 152, 108, 114, 141, 1, 100, 108, 41, 43, 85, 41, 43, 85, 108, 114, 141, 76, 78, 120, 95, 72, 106, 79, 54, 95, 1, 55, 98, 1, 55, 98, 41, 43, 85, 146, 125, 152, 95, 72, 106, 41, 43, 85, 41, 43, 85, 108, 136, 146, 95, 84, 109, 60, 71, 95, 38, 111, 119, 76, 78, 120, 108, 114, 141, 76, 78, 120, 1, 100, 108, 95, 72, 106, 114, 78, 112, 1, 55, 98, 41, 65, 90, 60, 71, 95, 79, 54, 95, 95, 84, 109, 146, 125, 152, 1, 100, 108, 76, 78, 120, 79, 54, 95, 1, 55, 98, 76, 78, 120, 41, 43, 85, 41, 65, 90, 1, 55, 98, 1, 55, 98, 41, 65, 90, 60, 71, 95, 76, 78, 120, 1, 55, 98, 114, 78, 112, 79, 54, 95, 1, 100, 108, 1, 55, 98, 108, 114, 141, 108, 114, 141, 127, 142, 152, 108, 136, 146, 76, 78, 120, 108, 114, 141, 41, 43, 85, 127, 142, 152, 1, 100, 108, 38, 111, 119, 127, 142, 152, 41, 43, 85, 1, 55, 98, 108, 114, 141, 41, 43, 85, 38, 111, 119, 108, 114, 141, 1, 55, 98, 108, 136, 146, 41, 65, 90, 146, 125, 152, 76, 78, 120, 108, 114, 141, 95, 72, 106, 76, 78, 120, 108, 136, 146, 38, 111, 119, 1, 100, 108, 146, 125, 152, 95, 84, 109, 79, 54, 95, 1, 55, 98, 1, 100, 108, 1, 100, 108, 1, 100, 108, 1, 100, 108, 108, 136, 146, 108, 136, 146, 1, 55, 98, 108, 114, 141, 41, 43, 85, 41, 43, 85, 41, 43, 85, 146, 125, 152, 38, 111, 119, 108, 136, 146, 41, 43, 85, 41, 43, 85, 38, 111, 119, 108, 114, 141, 38, 111, 119, 1, 55, 98, 41, 65, 90, 108, 136, 146, 1, 55, 98, 1, 55, 98, 1, 100, 108, 114, 78, 112, 76, 78, 120, 79, 54, 95, 1, 55, 98, 1, 55, 98, 41, 43, 85, 1, 100, 108, 1, 100, 108, 1, 55, 98, 60, 71, 95, 79, 54, 95, 95, 72, 106, 41, 65, 90, 1, 55, 98, 79, 54, 95, 95, 72, 106, 38, 111, 119, 38, 111, 119, 76, 78, 120, 1, 100, 108, 1, 55, 98, 1, 55, 98, 41, 43, 85, 146, 125, 152, 108, 136, 146, 41, 43, 85, 38, 111, 119, 108, 114, 141, 1, 55, 98, 1, 55, 98, 79, 54, 95, 114, 78, 112, 114, 78, 112, 41, 65, 90, 76, 78, 120, 41, 65, 90, 146, 125, 152, 1, 100, 108, 1, 55, 98, 38, 111, 119, 108, 114, 141, 1, 55, 98, 127, 142, 152, 1, 100, 108, 1, 100, 108, 95, 84, 109, 108, 114, 141, 108, 114, 141, 41, 43, 85, 1, 55, 98, 146, 125, 152, 1, 55, 98, 105, 86, 111, 146, 125, 152, 1, 100, 108, 108, 114, 141, 60, 71, 95, 79, 54, 95, 95, 72, 106, 41, 65, 90, 1, 55, 98, 108, 114, 141, 41, 65, 90, 108, 136, 146, 95, 72, 106, 95, 84, 109, 1, 100, 108, 1, 55, 98, 41, 65, 90, 41, 43, 85, 41, 65, 90, 1, 100, 108, 146, 125, 152, 1, 55, 98, 108, 136, 146, 76, 78, 120, 1, 55, 98, 1, 100, 108, 1, 55, 98, 105, 86, 111, 41, 43, 85, 127, 142, 152, 1, 100, 108, 1, 100, 108, 108, 114, 141, 146, 125, 152, 1, 100, 108, 108, 114, 141, 79, 54, 95, 114, 78, 112, 108, 114, 141, 41, 43, 85, 1, 55, 98, 41, 43, 85, 76, 78, 120, 1, 55, 98, 95, 72, 106, 1, 55, 98, 1, 100, 108, 1, 100, 108, 1, 55, 98, 146, 125, 152, 127, 142, 152, 41, 43, 85, 105, 86, 111, 79, 54, 95, 146, 125, 152, 41, 65, 90, 108, 136, 146, 1, 100, 108, 60, 71, 95, 114, 78, 112, 79, 54, 95, 1, 100, 108, 41, 65, 90, 108, 114, 141, 76, 78, 120, 41, 65, 90, 1, 55, 98, 41, 43, 85, 1, 55, 98, 76, 78, 120, 108, 114, 141, 108, 114, 141, 95, 84, 109, 1, 55, 98, 41, 43, 85, 127, 142, 152, 60, 71, 95, 79, 54, 95, 41, 43, 85, 1, 55, 98, 95, 72, 106, 1, 55, 98, 41, 43, 85, 108, 114, 141, 1, 55, 98, 38, 111, 119, 1, 55, 98, 1, 55, 98, 146, 125, 152, 41, 65, 90, 95, 72, 106, 1, 100, 108, 60, 71, 95, 1, 55, 98, 114, 78, 112, 146, 125, 152, 41, 43, 85, 108, 114, 141, 41, 43, 85, 38, 111, 119, 1, 55, 98, 76, 78, 120, 1, 55, 98, 76, 78, 120, 108, 114, 141, 127, 142, 152, 114, 78, 112, 76, 78, 120, 108, 136, 146, 108, 136, 146, 41, 43, 85, 1, 55, 98, 108, 136, 146, 1, 55, 98, 1, 100, 108, 114, 78, 112, 1, 55, 98, 1, 55, 98, 95, 72, 106, 41, 43, 85, 79, 54, 95, 79, 54, 95, 41, 65, 90, 76, 78, 120, 76, 78, 120, 108, 114, 141, 1, 100, 108, 108, 114, 141, 1, 55, 98, 1, 100, 108, 108, 114, 141, 105, 86, 111, 38, 111, 119, 79, 54, 95, 41, 65, 90, 146, 125, 152, 41, 43, 85, 76, 78, 120, 60, 71, 95, 41, 43, 85, 108, 114, 141, 1, 100, 108, 41, 43, 85, 41, 65, 90, 95, 72, 106, 41, 43, 85, 79, 54, 95, 1, 55, 98, 108, 114, 141, 146, 125, 152, 1, 55, 98, 76, 78, 120, 60, 71, 95, 1, 55, 98, 76, 78, 120, 1, 100, 108, 41, 43, 85, 41, 43, 85, 79, 54, 95, 108, 114, 141, 95, 72, 106, 1, 100, 108, 108, 114, 141, 76, 78, 120, 95, 84, 109, 1, 55, 98, 1, 100, 108, 41, 43, 85, 127, 142, 152, 1, 55, 98, 95, 84, 109, 76, 78, 120, 76, 78, 120, 1, 55, 98, 108, 136, 146, 95, 84, 109, 1, 100, 108, 60, 71, 95, 41, 43, 85, 79, 54, 95, 1, 55, 98, 76, 78, 120, 108, 136, 146, 95, 72, 106, 41, 65, 90, 1, 100, 108, 1, 55, 98, 79, 54, 95, 108, 136, 146, 1, 100, 108, 1, 55, 98, 79, 54, 95, 76, 78, 120, 1, 55, 98, 1, 55, 98, 1, 55, 98, 95, 72, 106, 1, 100, 108, 41, 43, 85, 108, 136, 146, 79, 54, 95, 79, 54, 95, 95, 84, 109, 76, 78, 120, 76, 78, 120, 38, 111, 119, 1, 55, 98, 41, 43, 85, 1, 55, 98, 1, 55, 98, 146, 125, 152, 76, 78, 120, 41, 43, 85, 41, 65, 90, 1, 55, 98, 38, 111, 119, 1, 55, 98, 76, 78, 120, 95, 84, 109, 1, 55, 98, 41, 43, 85, 1, 55, 98, 41, 43, 85, 1, 55, 98, 1, 100, 108, 76, 78, 120, 41, 43, 85, 108, 136, 146, 76, 78, 120, 79, 54, 95, 1, 100, 108, 1, 55, 98, 76, 78, 120, 41, 65, 90, 41, 65, 90, 76, 78, 120, 1, 100, 108, 1, 55, 98, 60, 71, 95, 1, 55, 98, 1, 100, 108, 41, 43, 85, 1, 55, 98, 79, 54, 95, 146, 125, 152, 1, 55, 98, 108, 114, 141, 79, 54, 95, 41, 43, 85, 79, 54, 95, 41, 65, 90, 38, 111, 119, 41, 43, 85, 41, 65, 90, 95, 72, 106, 1, 55, 98, 41, 43, 85, 76, 78, 120, 108, 114, 141, 1, 55, 98, 41, 43, 85, 76, 78, 120, 60, 71, 95, 108, 114, 141, 38, 111, 119, 41, 43, 85, 1, 55, 98, 41, 65, 90, 108, 114, 141, 108, 136, 146, 1, 100, 108, 146, 125, 152, 76, 78, 120, 1, 55, 98, 95, 72, 106, 146, 125, 152, 1, 100, 108, 146, 125, 152, 60, 71, 95, 1, 55, 98, 1, 100, 108, 108, 136, 146, 76, 78, 120, 38, 111, 119, 1, 100, 108, 79, 54, 95, 146, 125, 152, 1, 55, 98, 79, 54, 95, 41, 43, 85, 1, 55, 98, 108, 114, 141, 127, 142, 152, 76, 78, 120, 108, 114, 141, 41, 43, 85, 1, 55, 98, 1, 55, 98, 108, 136, 146, 1, 100, 108, 41, 43, 85, 1, 55, 98, 108, 114, 141, 108, 114, 141, 1, 100, 108, 1, 100, 108, 60, 71, 95, 127, 142, 152, 38, 111, 119, 76, 78, 120, 108, 114, 141, 95, 72, 106, 1, 55, 98, 41, 43, 85, 79, 54, 95, 76, 78, 120, 108, 136, 146, 95, 84, 109, 79, 54, 95, 95, 72, 106, 127, 142, 152, 41, 43, 85, 41, 43, 85, 1, 55, 98, 41, 43, 85, 38, 111, 119, 1, 100, 108, 95, 72, 106, 108, 114, 141, 108, 114, 141, 1, 100, 108, 79, 54, 95, 95, 84, 109, 1, 55, 98, 1, 55, 98, 41, 65, 90, 1, 55, 98, 108, 114, 141, 76, 78, 120, 1, 55, 98, 1, 55, 98, 146, 125, 152, 1, 55, 98, 60, 71, 95, 108, 114, 141, 146, 125, 152, 1, 55, 98, 114, 78, 112, 1, 55, 98, 76, 78, 120, 95, 84, 109, 95, 72, 106, 1, 55, 98, 1, 55, 98, 79, 54, 95, 1, 100, 108, 79, 54, 95, 108, 114, 141, 41, 43, 85, 1, 100, 108, 76, 78, 120, 41, 65, 90, 1, 100, 108, 108, 114, 141, 146, 125, 152, 79, 54, 95, 1, 55, 98, 105, 86, 111, 38, 111, 119, 1, 55, 98, 108, 114, 141, 76, 78, 120, 108, 136, 146, 1, 55, 98, 95, 84, 109, 38, 111, 119, 108, 114, 141, 1, 100, 108, 41, 65, 90, 1, 100, 108, 1, 100, 108, 146, 125, 152, 146, 125, 152, 41, 43, 85, 1, 100, 108, 41, 43, 85, 79, 54, 95, 146, 125, 152, 146, 125, 152, 38, 111, 119, 76, 78, 120, 95, 84, 109, 114, 78, 112, 108, 136, 146, 1, 55, 98, 79, 54, 95, 41, 43, 85, 76, 78, 120, 1, 55, 98, 1, 55, 98, 1, 55, 98, 1, 55, 98, 95, 84, 109, 108, 114, 141, 60, 71, 95, 1, 100, 108, 108, 114, 141, 1, 55, 98, 114, 78, 112, 108, 114, 141, 1, 100, 108, 76, 78, 120, 41, 43, 85, 1, 55, 98, 114, 78, 112, 108, 114, 141, 1, 100, 108, 41, 43, 85, 60, 71, 95, 108, 114, 141, 41, 65, 90, 41, 65, 90, 1, 100, 108, 1, 100, 108, 108, 136, 146, 95, 84, 109, 1, 55, 98, 1, 100, 108, 60, 71, 95, 38, 111, 119, 127, 142, 152, 1, 55, 98, 1, 100, 108, 1, 100, 108, 108, 114, 141, 1, 55, 98, 41, 43, 85, 95, 72, 106, 146, 125, 152, 76, 78, 120, 127, 142, 152, 108, 136, 146, 108, 136, 146, 41, 65, 90, 60, 71, 95, 76, 78, 120, 79, 54, 95, 1, 100, 108, 79, 54, 95, 1, 100, 108, 95, 84, 109, 1, 55, 98, 79, 54, 95, 76, 78, 120, 1, 100, 108, 1, 100, 108, 105, 86, 111, 76, 78, 120, 41, 65, 90, 41, 43, 85, 1, 55, 98, 108, 114, 141, 108, 136, 146, 108, 136, 146, 41, 65, 90, 76, 78, 120, 1, 100, 108, 1, 100, 108, 1, 55, 98, 108, 136, 146, 1, 100, 108, 76, 78, 120, 108, 114, 141, 114, 78, 112, 95, 72, 106, 127, 142, 152, 76, 78, 120, 41, 43, 85, 1, 55, 98, 1, 55, 98, 1, 55, 98, 127, 142, 152, 1, 55, 98, 41, 43, 85, 41, 65, 90, 76, 78, 120, 41, 65, 90, 95, 84, 109, 60, 71, 95, 146, 125, 152, 79, 54, 95, 1, 55, 98, 38, 111, 119, 41, 43, 85, 76, 78, 120, 41, 43, 85, 146, 125, 152, 76, 78, 120, 95, 84, 109, 41, 43, 85, 41, 43, 85, 108, 136, 146, 1, 100, 108, 1, 100, 108, 38, 111, 119, 108, 114, 141, 76, 78, 120, 127, 142, 152, 76, 78, 120, 108, 114, 141, 1, 55, 98, 1, 100, 108, 1, 55, 98, 95, 84, 109, 146, 125, 152, 108, 136, 146, 95, 84, 109, 127, 142, 152, 1, 55, 98, 76, 78, 120, 1, 55, 98, 105, 86, 111, 108, 136, 146, 1, 55, 98, 1, 55, 98, 1, 55, 98, 1, 55, 98, 76, 78, 120, 108, 114, 141, 1, 55, 98, 41, 43, 85, 41, 43, 85, 1, 55, 98, 38, 111, 119, 1, 55, 98, 76, 78, 120, 95, 84, 109, 146, 125, 152, 108, 114, 141, 1, 55, 98, 1, 100, 108, 1, 100, 108, 108, 136, 146, 1, 55, 98, 1, 55, 98, 1, 100, 108, 41, 43, 85, 1, 100, 108, 41, 43, 85, 1, 55, 98, 1, 55, 98, 1, 55, 98, 146, 125, 152, 60, 71, 95, 108, 136, 146, 41, 43, 85, 1, 55, 98, 41, 65, 90, 1, 100, 108, 41, 43, 85, 79, 54, 95, 114, 78, 112, 146, 125, 152, 76, 78, 120, 127, 142, 152, 76, 78, 120, 127, 142, 152, 108, 114, 141, 41, 65, 90, 108, 136, 146, 1, 55, 98, 1, 55, 98, 1, 55, 98, 95, 72, 106, 1, 55, 98, 38, 111, 119, 41, 43, 85, 1, 55, 98, 76, 78, 120, 60, 71, 95, 108, 114, 141, 146, 125, 152, 146, 125, 152, 76, 78, 120, 76, 78, 120, 76, 78, 120, 127, 142, 152, 41, 43, 85, 41, 43, 85, 41, 43, 85, 108, 114, 141, 108, 114, 141, 41, 65, 90, 76, 78, 120, 95, 72, 106, 108, 136, 146, 60, 71, 95, 108, 136, 146, 41, 43, 85, 76, 78, 120, 76, 78, 120, 1, 55, 98, 41, 43, 85, 1, 100, 108, 41, 43, 85, 1, 55, 98, 41, 43, 85, 1, 100, 108, 76, 78, 120, 108, 114, 141, 38, 111, 119, 1, 55, 98, 79, 54, 95, 79, 54, 95, 38, 111, 119, 95, 84, 109, 1, 55, 98, 1, 100, 108, 76, 78, 120, 76, 78, 120, 1, 55, 98, 1, 55, 98, 146, 125, 152, 76, 78, 120, 95, 84, 109, 108, 114, 141, 38, 111, 119, 38, 111, 119, 1, 55, 98, 114, 78, 112, 41, 65, 90, 41, 43, 85, 41, 65, 90, 76, 78, 120, 1, 100, 108, 41, 65, 90, 76, 78, 120, 41, 43, 85, 1, 100, 108, 1, 100, 108, 76, 78, 120, 95, 72, 106, 41, 65, 90, 108, 136, 146, 38, 111, 119, 79, 54, 95, 95, 84, 109, 41, 65, 90, 108, 136, 146, 108, 114, 141, 108, 114, 141, 76, 78, 120, 1, 100, 108, 146, 125, 152, 79, 54, 95, 41, 65, 90, 127, 142, 152, 146, 125, 152, 41, 43, 85, 41, 65, 90, 1, 55, 98, 108, 114, 141, 41, 43, 85, 146, 125, 152, 95, 72, 106, 146, 125, 152, 108, 136, 146, 38, 111, 119, 1, 55, 98, 76, 78, 120, 79, 54, 95, 1, 55, 98, 1, 100, 108, 105, 86, 111, 60, 71, 95, 1, 55, 98, 127, 142, 152, 95, 84, 109, 108, 114, 141, 95, 72, 106, 41, 43, 85, 41, 65, 90, 41, 43, 85, 41, 43, 85, 76, 78, 120, 76, 78, 120, 1, 55, 98, 41, 43, 85, 1, 55, 98, 1, 55, 98, 1, 100, 108, 95, 72, 106, 1, 55, 98, 38, 111, 119, 108, 114, 141, 146, 125, 152, 1, 100, 108, 1, 55, 98, 108, 114, 141, 105, 86, 111, 76, 78, 120, 146, 125, 152, 1, 100, 108, 1, 55, 98, 41, 43, 85, 1, 55, 98, 1, 100, 108, 41, 43, 85, 1, 55, 98, 38, 111, 119, 76, 78, 120, 79, 54, 95, 1, 55, 98, 41, 65, 90, 41, 65, 90, 108, 114, 141, 108, 114, 141, 105, 86, 111, 76, 78, 120, 108, 136, 146, 79, 54, 95, 1, 55, 98, 41, 65, 90, 1, 55, 98, 1, 55, 98, 1, 55, 98, 108, 114, 141, 95, 84, 109, 108, 136, 146, 1, 55, 98, 41, 43, 85, 95, 72, 106, 38, 111, 119, 146, 125, 152, 105, 86, 111, 1, 100, 108, 41, 43, 85, 1, 100, 108, 1, 55, 98, 38, 111, 119, 1, 100, 108, 79, 54, 95, 41, 43, 85, 95, 72, 106, 41, 43, 85, 95, 72, 106, 127, 142, 152, 127, 142, 152, 95, 72, 106, 108, 114, 141, 95, 84, 109, 1, 55, 98, 1, 55, 98, 1, 55, 98, 38, 111, 119, 1, 55, 98, 95, 84, 109, 1, 100, 108, 41, 43, 85, 1, 100, 108, 95, 84, 109, 105, 86, 111, 1, 55, 98, 108, 114, 141, 41, 43, 85, 1, 55, 98, 1, 55, 98, 146, 125, 152, 1, 100, 108, 108, 114, 141, 108, 136, 146, 1, 100, 108, 76, 78, 120, 1, 55, 98, 108, 136, 146, 95, 72, 106, 1, 100, 108, 76, 78, 120, 146, 125, 152, 41, 43, 85, 114, 78, 112, 76, 78, 120, 1, 55, 98, 1, 100, 108, 1, 100, 108, 108, 136, 146, 1, 55, 98, 1, 55, 98, 127, 142, 152, 41, 65, 90, 108, 114, 141, 76, 78, 120, 79, 54, 95, 1, 55, 98, 38, 111, 119, 76, 78, 120, 1, 55, 98, 38, 111, 119, 41, 65, 90, 108, 114, 141, 1, 55, 98, 1, 55, 98, 95, 72, 106, 41, 43, 85, 76, 78, 120, 79, 54, 95, 1, 100, 108, 95, 72, 106, 76, 78, 120, 108, 114, 141, 79, 54, 95, 108, 114, 141, 41, 65, 90, 41, 43, 85, 79, 54, 95, 95, 84, 109, 105, 86, 111, 1, 100, 108, 41, 65, 90, 146, 125, 152, 1, 55, 98, 76, 78, 120, 95, 84, 109, 41, 43, 85, 1, 55, 98, 76, 78, 120, 79, 54, 95, 1, 55, 98, 79, 54, 95, 41, 43, 85, 108, 114, 141, 41, 43, 85, 41, 43, 85, 1, 55, 98, 108, 136, 146, 79, 54, 95, 1, 55, 98, 41, 65, 90, 38, 111, 119, 76, 78, 120, 41, 43, 85, 108, 136, 146, 146, 125, 152, 1, 55, 98, 1, 55, 98, 108, 136, 146, 108, 136, 146, 1, 55, 98, 108, 114, 141, 1, 55, 98, 41, 65, 90, 1, 55, 98, 95, 72, 106, 108, 114, 141, 76, 78, 120, 79, 54, 95, 1, 55, 98, 1, 100, 108, 41, 65, 90, 76, 78, 120, 60, 71, 95, 146, 125, 152, 79, 54, 95, 108, 136, 146, 60, 71, 95, 146, 125, 152, 1, 55, 98, 1, 100, 108, 108, 136, 146, 60, 71, 95, 76, 78, 120, 108, 114, 141, 108, 114, 141, 41, 43, 85, 95, 84, 109, 108, 114, 141, 146, 125, 152, 41, 43, 85, 41, 43, 85, 114, 78, 112, 41, 65, 90, 41, 65, 90, 1, 55, 98, 95, 72, 106, 95, 72, 106, 41, 43, 85, 108, 114, 141, 41, 43, 85, 108, 114, 141, 95, 72, 106, 95, 72, 106, 76, 78, 120, 146, 125, 152, 1, 55, 98, 76, 78, 120, 60, 71, 95, 79, 54, 95, 76, 78, 120, 41, 43, 85, 95, 72, 106, 1, 55, 98, 38, 111, 119, 1, 100, 108, 95, 84, 109, 41, 43, 85, 108, 114, 141, 76, 78, 120, 41, 65, 90, 79, 54, 95, 76, 78, 120, 76, 78, 120, 146, 125, 152, 1, 55, 98, 146, 125, 152, 76, 78, 120, 1, 100, 108, 41, 43, 85, 41, 43, 85, 79, 54, 95, 1, 55, 98, 95, 72, 106, 76, 78, 120, 95, 72, 106, 60, 71, 95),
"format": "RGB8",
"height": 35,
"mipmaps": false,
"width": 35
}

[sub_resource type="ImageTexture" id="ImageTexture_qoj80"]
image = SubResource("Image_pvwiq")

[sub_resource type="ImageTexture" id="ImageTexture_n3hfd"]

[node name="PaletteImageTest" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0ppc7")
numberOfGames = 4
gridSize = 35
gameSeed = "butter"
colorPalette = Array[Color]([Color(0.0042845, 0.217538, 0.387296, 1), Color(0.59867, 0.396572, 0.556046, 1), Color(0.00392157, 0.568627, 0.462745, 1), Color(0.847629, 0.679977, 0.726253, 1), Color(0.324691, 0.122747, 0.280914, 1), Color(0.870588, 0.678431, 0.654902, 1), Color(0.837107, 0.683821, 0.735867, 1), Color(0.964706, 0.921569, 0.94902, 1)])
tiled = true
showGhost = null
metadata/_edit_pinned_properties_ = [&"colorPalette"]

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ImageTexture_qoj80")
stretch_mode = 1

[node name="TextureRectGhost" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.290196)
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ImageTexture_n3hfd")
stretch_mode = 1

[node name="ImageConstructor" type="Node" parent="."]
script = ExtResource("2_j0kto")
palette = Array[Color]([Color(0.0042845, 0.217538, 0.387296, 1), Color(0.59867, 0.396572, 0.556046, 1), Color(0.00392157, 0.568627, 0.462745, 1), Color(0.847629, 0.679977, 0.726253, 1), Color(0.324691, 0.122747, 0.280914, 1), Color(0.870588, 0.678431, 0.654902, 1), Color(0.837107, 0.683821, 0.735867, 1), Color(0.964706, 0.921569, 0.94902, 1)])

[node name="StepController" type="Node" parent="."]
script = ExtResource("3_ii0rx")

[node name="CopyRequestDetector" type="Node" parent="."]
script = ExtResource("4_oi4sq")

[node name="ImageSaver" type="Node" parent="."]
script = ExtResource("5_6dxcy")

[node name="PaletteGenerator" type="Node" parent="."]
script = ExtResource("6_ilha3")

[node name="PaletteRequestDetector" type="Node" parent="."]
process_mode = 4
editor_description = "I am fully off right now to not create an awful seed entering expereince."
script = ExtResource("7_s23i7")

[node name="SettingsUI" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("8_rgd68")

[node name="MarginContainer" type="MarginContainer" parent="SettingsUI"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Panel" type="PanelContainer" parent="SettingsUI/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="SettingsUI/MarginContainer/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsUI/MarginContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsUI/MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SeedLabel" type="Label" parent="SettingsUI/MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Seed:"

[node name="SeedInput" type="LineEdit" parent="SettingsUI/MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "butter"
max_length = 100

[node name="HBoxContainer2" type="HBoxContainer" parent="SettingsUI/MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GridSizeLabel" type="Label" parent="SettingsUI/MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Grid Size:"

[node name="GridSizeInput" type="SpinBox" parent="SettingsUI/MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
min_value = 10.0
step = 5.0
value = 35.0
rounded = true
alignment = 2
custom_arrow_step = 5.0

[node name="HBoxContainer3" type="HBoxContainer" parent="SettingsUI/MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NumberOfGamesLabel" type="Label" parent="SettingsUI/MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Number of Games:"

[node name="NumberOfGamesInput" type="SpinBox" parent="SettingsUI/MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 15.0
value = 4.0
rounded = true
alignment = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="SettingsUI/MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ShowGhostLabel" type="Label" parent="SettingsUI/MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
text = "Show Ghost?"

[node name="ShowGhostInput" type="CheckBox" parent="SettingsUI/MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
alignment = 2

[node name="ButtonsMargin" type="MarginContainer" parent="SettingsUI"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Panel" type="PanelContainer" parent="SettingsUI/ButtonsMargin"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="SettingsUI/ButtonsMargin/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsUI/ButtonsMargin/Panel/MarginContainer"]
layout_mode = 2

[node name="NextRoundButton" type="Button" parent="SettingsUI/ButtonsMargin/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Next Round"

[node name="NewPaletteButton" type="Button" parent="SettingsUI/ButtonsMargin/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "New Palette"

[node name="SaveImageButton" type="Button" parent="SettingsUI/ButtonsMargin/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Save Image
"

[connection signal="request_next_step" from="StepController" to="." method="_on_step_controller_request_next_step"]
[connection signal="request_image_to_clipboard" from="CopyRequestDetector" to="." method="_on_copy_detector_request_image_to_clipboard"]
[connection signal="paletteRequested" from="PaletteRequestDetector" to="." method="_on_palette_request_detector_palette_requested"]
[connection signal="gridSizeChanged" from="SettingsUI" to="." method="_on_settings_ui_grid_size_changed"]
[connection signal="newPaletteRequested" from="SettingsUI" to="." method="_on_settings_ui_new_palette_requested"]
[connection signal="nextRoundRequested" from="SettingsUI" to="." method="_on_settings_ui_next_round_requested"]
[connection signal="numberOfGamesChanged" from="SettingsUI" to="." method="_on_settings_ui_number_of_games_changed"]
[connection signal="saveImageRequested" from="SettingsUI" to="." method="_on_settings_ui_save_image_requested"]
[connection signal="seedChanged" from="SettingsUI" to="." method="_on_settings_ui_seed_changed"]
[connection signal="showGhostChanged" from="SettingsUI" to="." method="_on_settings_ui_show_ghost_changed"]
[connection signal="text_changed" from="SettingsUI/MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/SeedInput" to="SettingsUI" method="_on_seed_input_text_changed"]
[connection signal="value_changed" from="SettingsUI/MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer2/GridSizeInput" to="SettingsUI" method="_on_grid_size_input_value_changed"]
[connection signal="value_changed" from="SettingsUI/MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer3/NumberOfGamesInput" to="SettingsUI" method="_on_number_of_games_input_value_changed"]
[connection signal="toggled" from="SettingsUI/MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer4/ShowGhostInput" to="SettingsUI" method="_on_show_ghost_input_toggled"]
[connection signal="pressed" from="SettingsUI/ButtonsMargin/Panel/MarginContainer/VBoxContainer/NextRoundButton" to="SettingsUI" method="_on_next_round_button_pressed"]
[connection signal="pressed" from="SettingsUI/ButtonsMargin/Panel/MarginContainer/VBoxContainer/NewPaletteButton" to="SettingsUI" method="_on_new_palette_button_pressed"]
[connection signal="pressed" from="SettingsUI/ButtonsMargin/Panel/MarginContainer/VBoxContainer/SaveImageButton" to="SettingsUI" method="_on_save_image_button_pressed"]
